--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Web App for project now.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+	"build": "webpack -d",
+	"build-serve": "webpack -d && firebase serve",
+	"build-release": "webpack",
+	"deploy": "webpack && firebase deploy"
   },
   "repository": {
     "type": "git",
@@ -20,8 +24,15 @@
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-react": "^6.16.0",
-    "firebase": "^3.6.2",
+    "firebase": "^3.5.1",
     "react": "^15.4.0",
     "react-dom": "^15.3.2"
+  },
+  "devDependencies": {
+    "babel-jest": "^18.0.0",
+    "babel-preset-es2015": "^6.22.0",
+    "jest": "^18.1.0",
+    "react-test-renderer": "^15.4.0",
+    "webpack": "^1.13.2"
   }
 }
