--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "devDependencies": {
     "babel-jest": "^18.0.0",
     "babel-preset-es2015": "^6.22.0",
+    "casperjs": "^1.1.3",
     "jest": "^18.1.0",
+    "phantomjs": "^2.1.7",
     "react-test-renderer": "^15.4.0",
     "webpack": "^1.13.2"
   }
