--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "babel-preset-react": "^6.16.0",
     "firebase": "^3.5.1",
     "react": "^15.4.0",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "babel-jest": "^18.0.0",
