locale selector in EventCreator and EventEditor populated based on existing locales; EventEditor selector doesn't produce changes yet since changing locale is more complex than simply editing the event (requires creating new event)

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ android/keystores/debug.keystore
 #python
 ./webScraping/projectNowEnv
 
+
+firebase-debug\.log
+
+assets/build/bundle\.js
+
+assets/build/bundle\.js\.map
