add material-ui and react-tap-event-plugin to package.json

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "babel-loader": "^6.2.5",
     "babel-preset-react": "^6.16.0",
     "firebase": "^3.5.1",
+    "material-ui": "^0.17.1",
     "react": "^15.4.0",
     "react-dom": "^15.3.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-jest": "^18.0.0",
