--- a/server/static/package.json
+++ b/server/static/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.16.0",
     "firebase": "^3.5.1",
     "material-ui": "^0.17.1",
+    "materialui-pagination": "0.0.6",
     "react": "^15.4.0",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.2",
